--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <title>Odin Recipes</title>>
+        <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/pesto-pasta.html">Pesto Pasta Recipe</a>
     </body>
 </html>
