Replace 1st recipe and add images with my own
Avoiding potential copyright issues by making my own recipes and images from here on out.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pesto-pasta.html">Pesto Pasta Recipe</a>
+        <a href="./recipes/green-alien-soup.html">Green Alien Soup</a>
+        <br>
+        <br>
+        <p><b>Disclaimer</b>: Do not actually try to cook with these recipes. I made them up for this exercise.</p>
     </body>
 </html>
