Add mercury soup & mystery meal recipes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/green-alien-soup.html">Green Alien Soup</a></li>
+            <li><a href="./recipes/mercury-soup.html">Mercury Soup</a></li>
+            <li><a href="./recipes/mystery-meal.html">Mystery Meal</a></li>
+        </ul>
+        <!--
         <a href="./recipes/green-alien-soup.html">Green Alien Soup</a>
-        <br>
-        <br>
-        <p><b>Disclaimer</b>: Do not actually try to cook with these recipes. I made them up for this exercise.</p>
+        <a href="./recipes/mercury-soup.html">Mercury Soup</a>
+        <a href="./recipes/mystery-meal.html">Mystery Meal</a>
+        -->
+        <p><b>Disclaimer</b>: Do not attempt to cook with these recipes as they won't yield any delicious or healthy results. I made them up for this exercise.</p>
     </body>
 </html>
