--- a/recipes/mystery-meal.html
+++ b/recipes/mystery-meal.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Green Alien Soup</title>
+        <title>Mystery Meal</title>
     </head>
     
     <body>
