Add CSS styling to home page
Practicing using CSS, not a making this the final design.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset = "utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -12,11 +13,6 @@
             <li><a href="./recipes/mercury-soup.html">Mercury Soup</a></li>
             <li><a href="./recipes/mystery-meal.html">Mystery Meal</a></li>
         </ul>
-        <!--
-        <a href="./recipes/green-alien-soup.html">Green Alien Soup</a>
-        <a href="./recipes/mercury-soup.html">Mercury Soup</a>
-        <a href="./recipes/mystery-meal.html">Mystery Meal</a>
-        -->
-        <p><b>Disclaimer</b>: Do not attempt to cook with these recipes as they won't yield any delicious or healthy results. I made them up for this exercise.</p>
+        <p class="disclaimer"><b>Disclaimer</b>: Do not attempt to cook with these recipes as they won't yield any delicious or healthy results. I made them up for this exercise.</p>
     </body>
 </html>
